[package]
edition = "2024"
name = "common"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "=0.7.4", features = ["macros"]}
# tower = {version = "=0.4.13"}
# tower-http = {version = "=0.5.0", features = ["trace", "fs", "cors"]}
# bytes = {version = "=1.2.1"}
chrono = {version = "=0.4", features = ["serde"]}
dotenv = {version = "=0.15.0"}
http = {version = "=0.2.9"}
# regex = {version = "=1.9.3"}
# rand = {version = "=0.8", features = ["std_rng"]}
# num_cpus = {version = "=1.15.0"}
# argon2 = {version = "=0.4.0", features = ["std"]}
# mongodb = {version = "=2.0.1"}
reqwest = {version = "=0.11.17", default-features = false, features = ["json", "blocking", "rustls-tls", "cookies", "gzip", "brotli", "deflate", "trust-dns", "native-tls", "multipart", "stream", "cookies"]}
secrecy = {version = "=0.8", features = ["serde"]}
serde = {version = "=1.0", features = ["derive"]}
serde_derive = {version = "=1.0"}
serde_json = {version = "=1.0"}
thiserror = {version = "=1.0.48"}
tokio = {version = "=1.29.1", features = ["macros", "rt-multi-thread"]}
# uuid = {version = "=0.8", features = ["v4", "serde"]}
sqlx = {version = "=0.7.3", features = ["postgres", "uuid", "bigdecimal", "rust_decimal", "chrono", "time", "bit-vec", "runtime-tokio", "ipnetwork", "mac_address", "bit-vec", "json"]}
# valuable = {version = "=0.1.0", features = ["default", "std", "alloc", "derive", "valuable-derive"]}#maybe not all features needed
# validator = {version = "=0.16.0"}
tracing = {version = "=0.1", features = ["log", "valuable"]}
tracing-subscriber = {version = "=0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = {version = "=0.3"}
tracing-log = {version = "=0.1"}
utoipa = {version = "=4.1.0", features = ["axum_extras"]}
# uuid = {version = "=1.10.0", features = ["serde"]}
# utoipa-swagger-ui = {version = "=5.0.0", features=["axum"]}
schemars = {version = "=0.8.22"}
git_info = {path = "../git_info"}
from_str = {path = "../from_str"}
# from_sqlx_postgres_error = {path = "../from_sqlx_postgres_error"}
error_occurence_lib = {path = "../error_occurence_lib"}
postgresql_crud = {path = "../postgresql_crud"}
config_lib = {path = "../config_lib"}
app_state = {path = "../app_state"}
constants = {path = "../constants"}

[lints]
workspace = true