[package]
name = "common_routes"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "=0.7.4", features = ["macros"]}
serde.workspace = true
serde_json.workspace = true
utoipa = {version = "=4.1.0", features = ["axum_extras"]}
constants = {path = "../constants"}
git_info = {path = "../git_info"}

[lints]
workspace = true
