[package]
name = "common_routes"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
constants = {path = "../constants"}
git_info = {path = "../git_info"}

[lints]
workspace = true
