[package]
name = "config_lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secrecy.workspace = true
chrono.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
dotenv.workspace = true
enum_extension_lib = {path = "../enum_extension_lib"}
from_str = {path = "../from_str"}
try_from_env = {path = "./try_from_env"}
generate_getter_traits_for_struct_fields = {path = "./generate_getter_traits_for_struct_fields"}
impl_display_as_debug = {path = "../impl_display_as_debug"}

[lints]
workspace = true
