[package]
name = "config_lib"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"


[dependencies]
secrecy.workspace = true
chrono.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
dotenv.workspace = true
convert_case.workspace = true
try_from_env = {path = "./try_from_env"}
gen_getter_traits_for_struct_fields = {path = "./gen_getter_traits_for_struct_fields"}
optml = {path = "../optml"}

[lints]
workspace = true
