[package]
name = "enum_extension_lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_extension = {path = "./enum_extension"}
strum = {version = "=0.24.1"}
convert_case = {version = "=0.6.0"}

[lints]
workspace = true
