[package]
name = "enum_extension_lib"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_extension = {path = "./enum_extension"}
strum.workspace = true
convert_case.workspace = true

[lints]
workspace = true
