[package]
name = "enum_extension_lib"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"


[dependencies]
enum_extension = {path = "./enum_extension"}
strum.workspace = true
convert_case.workspace = true

[lints]
workspace = true
