[package]
name = "error_occurence_lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa.workspace = true
chrono.workspace = true
serde.workspace = true
schemars.workspace = true
git_info = {path = "../git_info"}
app_state = {path = "../app_state"}
error_occurence = {path = "./error_occurence"}
naming = {path = "../naming"}
to_std_string_string = {path = "../to_std_string_string"}

[lints]
workspace = true
