[package]
name = "error_occurence_test"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = {version = "=1.0.48"}
serde = {version = "=1.0", features = ["derive"]}
serde_json = {version = "=1.0"}
# config_lib = {path = "../config_lib"}
error_occurence_lib = {path = "../error_occurence_lib"}

[lints]
workspace = true
