[package]
name = "file_system"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
loc_lib = {path = "../loc_lib"}
optml = {path = "../optml"}

[lints]
workspace = true
