[package]
edition = "2021"
name = "from_sqlx_postgres_error"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
# quote = {version = "=1.0.36"}
# syn = {version = "=2.0.60"}
# proc_macro_helpers = {path = "../proc_macro_helpers"}
# macros_common = {path = "../macros_common"}

[lints]
workspace = true
