[package]
edition = "2024"
name = "from_sqlx_postgres_error"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
# quote = {version = "=1.0.36"}
# syn = {version = "=2.0.100"}
# macros_helpers = {path = "../macros_helpers"}
# generate_quotes = {path = "../generate_quotes"}

[lints]
workspace = true
