[package]
edition = "2024"
name = "from_str"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = {version = "=1.0.81"}
quote = {version = "=1.0.36"}
syn = {version = "=2.0.60"}
convert_case = {version = "=0.6.0"}
constants = {path = "../constants"}
panic_location = {path = "../panic_location"}
naming = {path = "../naming"}

[lints]
workspace = true
