[package]
edition = "2024"
name = "from_str"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case.workspace = true
constants = {path = "../constants"}
panic_location = {path = "../panic_location"}
naming = {path = "../naming"}

[lints]
workspace = true
