[package]
edition = "2024"
name = "from_str"
version = "0.1.0"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case.workspace = true
panic_location = {path = "../panic_location"}

[lints]
workspace = true
