[package]
name = "git_info"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_derive.workspace = true
compile_time_git_info = {path = "./compile_time_git_info"}
naming = {path = "../naming"}

[lints]
workspace = true
