[package]
name = "git_info"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"


[dependencies]
serde.workspace = true
serde_derive.workspace = true
compile_time_git_info = {path = "./compile_time_git_info"}
naming = {path = "../naming"}
optml = {path = "../optml"}

[lints]
workspace = true
