[package]
name = "git_info"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"


[dependencies]
serde.workspace = true
serde_derive.workspace = true
git-version.workspace = true
naming = {path = "../naming"}
optml = {path = "../optml"}

[lints]
workspace = true
