[package]
name = "impl_display_as_debug"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
panic_location = {path = "../panic_location"}
macros_helpers = {path = "../macros_helpers"}

[lints]
workspace = true
