[package]
name = "impl_display_as_debug"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
panic_loc = {path = "../panic_loc"}
macros_helpers = {path = "../macros_helpers"}

[lints]
workspace = true
