[package]
name = "loc_lib"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"


[dependencies]
utoipa.workspace = true
chrono.workspace = true
serde.workspace = true
schemars.workspace = true
git_info = {path = "../git_info"}
app_state = {path = "../app_state"}
location = {path = "./location"}
naming = {path = "../naming"}
to_err_string = {path = "../to_err_string"}
optml = {path = "../optml"}

[lints]
workspace = true
