[package]
name = "loc_test"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
loc_lib = {path = "../loc_lib"}
optml = {path = "../optml"}

[lints]
workspace = true
