[package]
name = "loc_test"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"

[dependencies]
thiserror.workspace = true
serde.workspace = true
loc_lib = {path = "../loc_lib"}
optml = {path = "../optml"}

[lints]
workspace = true
