[package]
name = "location_lib"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa.workspace = true
chrono.workspace = true
serde.workspace = true
schemars.workspace = true
git_info = {path = "../git_info"}
app_state = {path = "../app_state"}
location = {path = "./location"}
naming = {path = "../naming"}
to_err_string = {path = "../to_err_string"}

[lints]
workspace = true
