[package]
name = "location_test"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
location_lib = {path = "../location_lib"}
optimal_pack = {path = "../optimal_pack"}

[lints]
workspace = true
