[package]
edition = "2024"
name = "macros_helpers"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2 = {version = "=1.0.81"}
quote = {version = "=1.0.36"}
syn = {version = "=2.0.60"} # activate impl Display trait in proc macros: syn = { version = "1.0.75", features = ["extra-traits"]}
strum_macros = {version = "=0.24.3"}
token_patterns = {path = "../token_patterns"}
generate_quotes = {path = "../generate_quotes"}
constants = {path = "../constants"}
naming = {path = "../naming"}

[lints]
workspace = true
