[package]
edition = "2024"
name = "macros_helpers"
version = "0.1.0"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
strum_macros.workspace = true
token_patterns = {path = "../token_patterns"}
generate_quotes = {path = "../generate_quotes"}
naming = {path = "../naming"}
generate_struct_or_enum_derive_token_stream_builder = {path = "./generate_struct_or_enum_derive_token_stream_builder"}

[lints]
workspace = true
