[package]
name = "naming"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
constants = {path = "../constants"}
generate_quotes = {path = "../generate_quotes"}
naming_macros = {path = "./naming_macros"}
naming_common = {path = "./naming_common"}

[lints]
workspace = true
