[package]
name = "naming"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
gen_quotes = {path = "../gen_quotes"}
naming_macros = {path = "./naming_macros"}
naming_cmn = {path = "./naming_cmn"}
optml = {path = "../optml"}

[lints]
workspace = true
