[package]
name = "naming_constants"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = {version = "=1.0.67"}
quote = {version = "=1.0.33"}
gen_naming_trait_impl = {path = "./gen_naming_trait_impl"}

[lints]
workspace = true
