[package]
name = "optimal_pack"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote.workspace = true
syn.workspace = true
# proc-macro2.workspace = true
# convert_case.workspace = true
gen_quotes = {path = "../gen_quotes"}

[lints]
workspace = true
