[package]
name = "pg_crud"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros.workspace = true
futures.workspace = true
uuid.workspace = true
pg_crud_common = {path = "./pg_crud_common", features = ["test-utils"]}
pg_table = {path = "./pg_table"}
pg_json_object_type = {path = "./pg_json_object_type"}
pg_json_types = {path = "./pg_json_types"}
pg_types = {path = "./pg_types"}
where_filters = {path = "./where_filters"}
route_validators = {path = "../route_validators"}

[lints]
workspace = true

[features]
test-utils = [
    "pg_crud_common/test-utils",
    "pg_table/test-utils",
    "pg_json_types/test-utils",
    "pg_types/test-utils",
    "where_filters/test-utils"
]
