[package]
name = "pg_crud"
version = "0.1.0"
edition = "2024"
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum_macros.workspace = true
futures.workspace = true
uuid.workspace = true
pg_crud_common = {path = "./pg_crud_common", features = ["test-utils"]}
pg_table = {path = "./pg_table"}
pg_json_obj = {path = "./pg_json_obj"}
pg_json = {path = "./pg_json"}
pg_types = {path = "./pg_types"}
wh_filters = {path = "./wh_filters"}
route_validators = {path = "../route_validators"}

[lints]
workspace = true

[features]
test-utils = [
    "pg_crud_common/test-utils",
    "pg_table/test-utils",
    "pg_json/test-utils",
    "pg_types/test-utils",
    "wh_filters/test-utils"
]
