[package]
name = "pg_crud"
version = "0.1.0"
publish = false
description = "description"
repository = "repository"
readme = "readme"
license = "license"
keywords = ["keyword"]
categories = ["category"]
edition = "2024"


[dependencies]
strum_macros.workspace = true
futures.workspace = true
uuid.workspace = true
pg_crud_cmn = {path = "./pg_crud_cmn", features = ["test-utils"]}
pg_tbl = {path = "./pg_tbl"}
pg_json_obj = {path = "./pg_json_obj"}
pg_json = {path = "./pg_json"}
pg_types = {path = "./pg_types"}
wh_flts = {path = "./wh_flts"}
route_validators = {path = "../route_validators"}

[lints]
workspace = true

[features]
test-utils = [
    "pg_crud_cmn/test-utils",
    "pg_tbl/test-utils",
    "pg_json/test-utils",
    "pg_types/test-utils",
    "wh_flts/test-utils"
]
